--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,12 @@
   background-color: white;
   -webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
   filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
-  padding: 15px;
+  padding: 8px;
   border-radius: 10px;
   border: 1px solid #cccccc;
   bottom: 12px;
   left: -50px;
-  min-width: 150px;
+  min-width: 70px;
 }
 .ol-popup:after, .ol-popup:before {
   top: 100%;
@@ -61,6 +61,7 @@
 
 .scroller {
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .scroller:hover {
@@ -90,4 +91,16 @@
 
 .link:hover {
   text-decoration: underline;
+}
+
+.selectable {
+  cursor: pointer;
+}
+
+.unselectable {
+  cursor: default !important;
+}
+
+.selectable:hover { 
+  background-color: rgb(233, 233, 233);
 }
